--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -17,10 +17,9 @@
 # Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 ###############################################################################
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
-PROJECT(Wintermute)
 
-# TODO Import our CMake directory to allow for recycling of common tooling.
-add_subdirectory(src/core)
-#add_subdirectory(src/bin)
-#add_subdirectory(test)
+# TODO Define some unit-test targets.
+# TODO Define a test for the library's plugin class.
+# TODO Define a test for the library's driver class.
+# TODO Define a test for the library's version class.
+# TODO Define a test that checks out the generated 'export.hpp'.
