--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,9 +18,6 @@
 # Boston, MA 02111-1307, USA.
 ###############################################################################
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
-PROJECT(Wintermute)
 
-# TODO Import our CMake directory to allow for recycling of common tooling.
-add_subdirectory(src/core)
-#add_subdirectory(src/bin)
-#add_subdirectory(test)
+add_subdirectory(core)
+add_subdirectory(driver)
