--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,10 +17,7 @@
 # Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 ###############################################################################
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
-PROJECT(Wintermute)
 
-# TODO Import our CMake directory to allow for recycling of common tooling.
-add_subdirectory(src/core)
-#add_subdirectory(src/bin)
-#add_subdirectory(test)
+add_subdirectory(unit)
+add_subdirectory(integration)
+add_subdirectory(regression)
