Dropped down to using straight C++11 specific logic.
  Added code for message class.
  Added code for designation struct.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,5 +19,5 @@
 ###############################################################################
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
-add_subdirectory(core)
-add_subdirectory(driver)
+# Include the directory that'll hold the files for `libwintermutecore
+ADD_SUBDIRECTORY(libwintermutecore)
