Updated message class to use private pointer data under the hood.

--- a/src/libwintermutecore/CMakeLists.txt
+++ b/src/libwintermutecore/CMakeLists.txt
@@ -24,3 +24,7 @@ set(_srcs
 )
 
 ADD_LIBRARY(wintermutecore SHARED ${_srcs})
+
+SET_TARGET_PROPERTIES(wintermutecore PROPERTIES
+  COMPILE_FLAGS -std=c++11
+)
