Add globals test to suite.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,5 +33,6 @@ macro(ADD_A_TEST _name _hdr)
   target_link_libraries(unittest_${_name} wintermutecore)
 endmacro(ADD_A_TEST)
 
+add_a_test(globals ${CMAKE_SOURCE_DIR}/test/unit/globals.hh)
 add_a_test(message ${CMAKE_SOURCE_DIR}/test/unit/message.hh)
 add_a_test(module ${CMAKE_SOURCE_DIR}/test/unit/module.hh)
