--- a/.travis.yml
+++ b/.travis.yml
@@ -4,33 +4,19 @@ compiler:
   - clang
 
 before_install:
+  - sudo apt-add-repository ppa:dhart/ppa -y
   - sudo apt-get update -qq
-  - sudo apt-get install -qq pkg-config cmake
-  - sudo pip install cpp-coveralls
+  - sudo apt-get install -qq pkg-config cmake cxxtest
   - test/build_dependencies.bash
 
 before_script:
   - mkdir build && cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DWITH_DBUS=ON -DWITH_TESTS=ON -DWITH_DOCUMENTATION=OFF -DCMAKE_MODULE_PATH=/usr/share/apps/cmake
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug
 
 script:
   - make all
   - make test
 
-after_success:
-  - coveralls -r . -e .
-
-env:
-  - CMAKE_MODULE_PATH=/usr/share/apps/cmake/Modules:/usr/share/apps/cmake/modules
-
 branches:
   except:
     - master
-
-notifications:
-  email: me@jalcine.me
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/a032628cb25b35b52924
-    on_success: change
-    on_failure: always
