Add MessageSerializer into the mix.
  Closes #22

Squashed commit of the following:

commit 6b05414442e5e45ae68d12e7423ed3f76fc243fd
Author: Jacky Alciné <me@jalcine.me>
Date:   Sat Jul 19 17:26:17 2014 -0400

    Use G++-4.7

    Use vanilla GCC.

    Remove old g++.

    Make sure build-essential is there.

commit cb4abd934361ab573b6f966d9236b9be799fef1f
Author: Jacky Alciné <me@jalcine.me>
Date:   Sat Jul 19 17:26:17 2014 -0400

    Use G++-4.7

commit 556a187778981d0cfba82bf8b800ced1bb3565ec
Author: Jacky Alciné <me@jalcine.me>
Date:   Sat Jul 19 17:24:01 2014 -0400

    Use new toolchain for G++ 4.7

commit 138e5dcc432812529ad0de7364bbaa37b26d35ed
Author: Jacky Alciné <me@jalcine.me>
Date:   Sat Jul 19 17:19:16 2014 -0400

    Light formatting.

commit 05457d4b8a4d2bebd22131a5fce2fc52ae638f32
Author: Jacky Alciné <me@jalcine.me>
Date:   Sat Jul 19 17:14:30 2014 -0400

    Improved setters for message and used asserts.

commit d6394a786dc65e51e79fab032651d580e3bbb971
Author: Jacky Alciné <me@jalcine.me>
Date:   Sat Jul 19 16:58:50 2014 -0400

     #22 - Updated Message class and added more tests to ensure valid changes.

commit 4651ca7e352dd82ae79a5cbc382104f6857120b8
Author: Jacky Alciné <me@jalcine.me>
Date:   Sat Jul 19 16:51:33 2014 -0400

    Added missing methods to Message.

commit 4e4f264df081a865d8aad79afbfab292f6e80967
Author: Jacky Alciné <me@jalcine.me>
Date:   Sat Jul 19 16:27:50 2014 -0400

     #12 - Add logic to import the payload from JSON.

commit 2a7428d1d8ad339c7ed902616fb650ec4cc04517
Author: Jacky Alciné <me@jalcine.me>
Date:   Sat Jul 19 15:56:04 2014 -0400

    Added 'jsoncpp' to the test suite.

commit fb146b798e77515ffeaa781fe71744d382e7eccc
Author: Jacky Alciné <me@jalcine.me>
Date:   Sat Jul 19 15:53:27 2014 -0400

     #12 - Updated serializer to use jsoncpp.

commit 0a0f69441d53a71556a6957ac3bb2a4b8ee4482d
Author: Jacky Alciné <me@jalcine.me>
Date:   Sat Jul 19 14:51:44 2014 -0400

     #22 - Added `MessageSerializer` and accompanyi

--- a/src/libwintermutecore/CMakeLists.txt
+++ b/src/libwintermutecore/CMakeLists.txt
@@ -21,21 +21,35 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 # Look for things this library needs/wants.
 # INCLUDE(FindBacktrace) # -- Use for debug logging.
+INCLUDE(FindPkgConfig)
 
-# Set up sources.
-CONFIGURE_FILE(./globals.hpp.in globals.hpp @ONLY)
+PKG_SEARCH_MODULE(JSONCPP jsoncpp REQUIRED)
+
+# Set some variables we'd use a lot.
+set(LIBWNTRCORE_INCLUDE_DIRS
+  ${JSONCPP_INCLUDE_DIRS})
+
+set(LIBWNTRCORE_LIBRARIES
+  ${JSONCPP_LIBRARIES})
 
 set(_srcs
   ./module.cpp
   ./message.cpp
+  ./message_serializer.cpp
 )
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
+# Set up sources.
+CONFIGURE_FILE(./globals.hpp.in globals.hpp @ONLY)
+
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}
+  ${LIBWNTRCORE_INCLUDE_DIRS})
 
 ADD_LIBRARY(wintermutecore SHARED ${_srcs})
 
 SET_TARGET_PROPERTIES(wintermutecore PROPERTIES
-  COMPILE_FLAGS "-std=c++11 -Wall -x c++"
+  COMPILE_FLAGS "-Wall -std=c++11"
 )
+
+TARGET_LINK_LIBRARIES(wintermutecore ${LIBWNTRCORE_LIBRARIES})
 
 GENERATE_EXPORT_HEADER(wintermutecore)
