--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ compiler:
 
 before_install:
   - sudo apt-add-repository ppa:dhart/ppa -y
+  - sudo apt-add-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -qq
-  - sudo apt-get install -qq pkg-config cmake cxxtest
+  - sudo apt-get remove g++
+  - sudo apt-get install -qq pkg-config cmake cxxtest libjsoncpp-dev g++-4.7 build-essential
   - test/build_dependencies.bash
 
 before_script:
@@ -16,7 +18,3 @@ before_script:
 script:
   - make all
   - make test
-
-branches:
-  except:
-    - master
