--- a/src/libwintermutecore/globals.hpp.in
+++ b/src/libwintermutecore/globals.hpp.in
@@ -2,12 +2,12 @@
 #define WINTERMUTE_CORE_GLOBALS_HPP
 
 #include <unistd.h>
+#include <sys/types.h>
 #include <tr1/memory>
+#include <stdexcept>
+#include <cassert>
 
-#cmakedefine01 Backtrace_FOUND
-#if Backtrace_FOUND
-# include <${Backtrace_HEADER}>
-#endif
+#cmakedefine01 CMAKE_BUILD_TYPE
 
 #define UniquePtr  ::std::unique_ptr
 #define SharedPtr  ::std::tr1::shared_ptr
