--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,3 +36,4 @@ endmacro(ADD_A_TEST)
 add_a_test(globals ${CMAKE_SOURCE_DIR}/test/unit/globals.hh)
 add_a_test(message ${CMAKE_SOURCE_DIR}/test/unit/message.hh)
 add_a_test(module ${CMAKE_SOURCE_DIR}/test/unit/module.hh)
+add_a_test(message_serializer ${CMAKE_SOURCE_DIR}/test/unit/message_serializer.hh)
