Squashed commit of the following:
commit c822827029c348300dbfe7476bd214cf568ee6d9
Author: Jacky Alciné <me@jalcine.me>
Date:   Sun Jul 20 00:01:43 2014 -0400

    Implemented ModulePool and wrote out accompanying tests.

Closes issue #24.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,9 +31,13 @@ INCLUDE_DIRECTORIES(${CXXTEST_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/src
 macro(ADD_A_TEST _name _hdr)
   CXXTEST_ADD_TEST(unittest_${_name} ${_name}_test.cc ${_hdr})
   target_link_libraries(unittest_${_name} wintermutecore)
+  SET_TARGET_PROPERTIES(unittest_${_name} PROPERTIES
+    COMPILE_FLAGS "-Wall -std=c++11"
+ )
 endmacro(ADD_A_TEST)
 
 add_a_test(globals ${CMAKE_SOURCE_DIR}/test/unit/globals.hh)
 add_a_test(message ${CMAKE_SOURCE_DIR}/test/unit/message.hh)
 add_a_test(module ${CMAKE_SOURCE_DIR}/test/unit/module.hh)
+add_a_test(module_pool ${CMAKE_SOURCE_DIR}/test/unit/module_pool.hh)
 add_a_test(message_serializer ${CMAKE_SOURCE_DIR}/test/unit/message_serializer.hh)
