--- a/src/libwintermutecore/globals.hpp.in
+++ b/src/libwintermutecore/globals.hpp.in
@@ -3,14 +3,14 @@
 
 #include <unistd.h>
 #include <sys/types.h>
-#include <tr1/memory>
+#include <memory>
 #include <stdexcept>
 #include <cassert>
 
 #cmakedefine01 CMAKE_BUILD_TYPE
 
 #define UniquePtr  ::std::unique_ptr
-#define SharedPtr  ::std::tr1::shared_ptr
+#define SharedPtr  ::std::shared_ptr
 
 #define W_DEFINE_PRIVATE(Class) \
   inline Class##Private* d_func() const { return d_ptr.get(); } \
