Squashed commit of the following:
commit 8f33ccac5c12d434f6153c8a417212bb80803c78
Author: Jacky Alciné <me@jalcine.me>
Date:   Sun Jul 20 00:33:31 2014 -0400

    Refactoring for module and checking ABI.

    Closes issue #21.

--- a/src/libwintermutecore/CMakeLists.txt
+++ b/src/libwintermutecore/CMakeLists.txt
@@ -34,6 +34,7 @@ set(LIBWNTRCORE_LIBRARIES
 
 set(_srcs
   ./module.cpp
+  ./module_designation.cpp
   ./module_pool.cpp
   ./message.cpp
   ./message_serializer.cpp
