Squashed commit of the following:
commit ae6e80f2345e1abf547abeaacafccc6c376f1c6e
Author: Jacky Alciné <me@jalcine.me>
Date:   Sun Jul 20 13:38:40 2014 -0400

    Added logging.cpp to the build.

commit 07590dd09505b3b68962fd61752316012f3493b7
Author: Jacky Alciné <me@jalcine.me>
Date:   Sun Jul 20 13:38:06 2014 -0400

    Updated globals to handle noop();

commit cf8853c90895abe2f0254429dda7307908f629c8
Author: Jacky Alciné <me@jalcine.me>
Date:   Sun Jul 20 13:37:15 2014 -0400

    Add logging facilities into Wintermute -> log4cxx

commit 946371ff51a8af638770f3b62f2897c740d467d5
Author: Jacky Alciné <me@jalcine.me>
Date:   Sun Jul 20 10:22:48 2014 -0400

    Add basis of Logging.

Closes issue #15.

--- a/src/libwintermutecore/CMakeLists.txt
+++ b/src/libwintermutecore/CMakeLists.txt
@@ -24,15 +24,20 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 INCLUDE(FindPkgConfig)
 
 PKG_SEARCH_MODULE(JSONCPP jsoncpp REQUIRED)
+PKG_SEARCH_MODULE(LOG4CXX liblog4cxx REQUIRED)
 
 # Set some variables we'd use a lot.
 set(LIBWNTRCORE_INCLUDE_DIRS
-  ${JSONCPP_INCLUDE_DIRS})
+  ${JSONCPP_INCLUDE_DIRS}
+  ${LOG4CXX_INCLUDE_DIRS})
 
 set(LIBWNTRCORE_LIBRARIES
-  ${JSONCPP_LIBRARIES})
+  ${JSONCPP_LIBRARIES}
+  ${LOG4CXX_LIBRARIES})
 
 set(_srcs
+  ./globals.cpp
+  ./logging.cpp
   ./module.cpp
   ./module_designation.cpp
   ./module_pool.cpp
