--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-add-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -qq
   - sudo apt-get remove g++
-  - sudo apt-get install -qq pkg-config cmake cxxtest libjsoncpp-dev g++-4.7 build-essential
+  - sudo apt-get install -qq g++-4.7 build-essential
   - test/build_dependencies.bash
 
 before_script:
