--- a/src/libwintermutecore/globals.hpp.in
+++ b/src/libwintermutecore/globals.hpp.in
@@ -1,13 +1,41 @@
+/*
+ * Wintermute is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Library General Public
+ * License as published by the Free Software Foundation; either
+ * version 3 of the License, or (at your option) any later version.
+ *
+ * Wintermute is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Library General Public License for more details.
+ *
+ * You should have received a copy of the GNU Library General Public
+ * License along with Wintermute; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
+
 #ifndef WINTERMUTE_CORE_GLOBALS_HPP
 #define WINTERMUTE_CORE_GLOBALS_HPP
 
-#include <unistd.h>
-#include <sys/types.h>
+#include <cassert>
+#include <cstdlib>
+#include <cxxabi.h>
+#include <initializer_list>
 #include <memory>
 #include <stdexcept>
-#include <cassert>
+#include <string>
+#include <sys/types.h>
+#include <type_traits>
+#include <unistd.h>
 
 #cmakedefine01 CMAKE_BUILD_TYPE
+
+#include "wintermutecore_export.h"
+
+using std::string;
+
+// {{{ Private + Public Accessors
 
 #define UniquePtr  ::std::unique_ptr
 #define SharedPtr  ::std::shared_ptr
@@ -28,6 +56,9 @@
 
 #define W_PUB(Class) Class* const q = q_func();
 
+// }}}
+
+// {{{ Singleton class access
 #define W_DEFINE_SINGLETON(Class) \
   private: \
     static SharedPtr<Class> _instance; \
@@ -37,13 +68,22 @@
 #define W_DECLARE_SINGLETON(Class) \
   SharedPtr<Class> Class::_instance(new Class());
 
+// }}}
+
+// {{{ Platform-specific types
 namespace Wintermute
 {
 typedef ::pid_t PID;
 }
 
+// }}}
+
+// {{{ Functions to help the process
 void w_noop(void);
+// }}}
 
-#include "wintermutecore_export.h"
+#define W_DECLARE_PTR_TYPE(Class) typedef SharedPtr<Class> Ptr;
 
-#endif
+#endif // end globaldef
+
+// vim: set fdm=marker :
