--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ compiler:
 
 before_install:
   - sudo apt-add-repository ppa:dhart/ppa -y
+  - sudo apt-add-repository ppa:boost-latest/ppa -y
   - sudo apt-add-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -qq
   - sudo apt-get remove g++
