--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,6 +32,7 @@ ENDIF(NOT CXXTEST_FOUND)
 SET(WINTERMUTE_TEST_INCLUDE_DIRS 
   ${CXXTEST_INCLUDE_DIR}
   ${CMAKE_SOURCE_DIR}/test
+  ${CMAKE_BINARY_DIR}/test
   ${CMAKE_SOURCE_DIR}/src
   ${CMAKE_BINARY_DIR}/src
   ${CMAKE_BINARY_DIR}/src/libwintermutecore
@@ -50,4 +51,7 @@ MACRO(ADD_A_TEST _prefix _name _hdr)
     PROPERTY INCLUDE_DIRECTORIES ${WINTERMUTE_TEST_INCLUDE_DIRS})
 ENDMACRO(ADD_A_TEST)
 
+ADD_SUBDIRECTORY(fixtures)
 ADD_SUBDIRECTORY(unit)
+
+CONFIGURE_FILE(./test_globals.hpp.in test_globals.hpp @ONLY)
