--- a/src/libwintermutecore/globals.hpp.in
+++ b/src/libwintermutecore/globals.hpp.in
@@ -44,10 +44,10 @@ using std::string;
 #define SharedPtr  ::std::shared_ptr
 
 #define W_DEFINE_PRIVATE(Class) \
+  friend class Class##Private; \
   inline Class##Private* d_func() const { return d_ptr.get(); } \
   inline Class##Private* d_func() { return d_ptr.get(); } \
-  friend class Class##Private; \
-  SharedPtr<Class##Private> d_ptr;
+  SharedPtr<Class##Private> d_ptr = nullptr;
 
 #define W_PRV(Class) Class##Private* const d = d_func();
 
