--- a/src/libwintermutecore/globals.hpp.in
+++ b/src/libwintermutecore/globals.hpp.in
@@ -42,6 +42,7 @@ using std::string;
 
 #define UniquePtr  ::std::unique_ptr
 #define SharedPtr  ::std::shared_ptr
+#define W_DECLARE_PTR_TYPE(Class) typedef SharedPtr<Class> Ptr;
 
 #define W_DEFINE_PRIVATE(Class) \
   friend class Class##Private; \
@@ -89,8 +90,6 @@ typedef ::pid_t PID;
 void w_noop(void);
 // }}}
 
-#define W_DECLARE_PTR_TYPE(Class) typedef SharedPtr<Class> Ptr;
-
 #endif // end globaldef
 
-// vim: set fdm=marker :
+// vim: set fdm=syntax :
