--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,10 +29,9 @@ IF (NOT CXXTEST_FOUND)
   RETURN()
 ENDIF(NOT CXXTEST_FOUND)
 
-SET(WINTERMUTE_TEST_INCLUDE_DIRS 
+SET(WINTERMUTE_TEST_INCLUDE_DIRS
   ${CXXTEST_INCLUDE_DIR}
-  ${CMAKE_SOURCE_DIR}/test
-  ${CMAKE_BINARY_DIR}/test
+	${CMAKE_SOURCE_DIR}/test/include
   ${CMAKE_SOURCE_DIR}/src
   ${CMAKE_BINARY_DIR}/src
   ${CMAKE_BINARY_DIR}/src/libwintermutecore
@@ -51,7 +50,8 @@ MACRO(ADD_A_TEST _prefix _name _hdr)
     PROPERTY INCLUDE_DIRECTORIES ${WINTERMUTE_TEST_INCLUDE_DIRS})
 ENDMACRO(ADD_A_TEST)
 
+CONFIGURE_FILE(include/test_suite.hpp.in
+	${CMAKE_CURRENT_SOURCE_DIR}/include/test_suite.hpp @ONLY)
+
 ADD_SUBDIRECTORY(fixtures)
 ADD_SUBDIRECTORY(unit)
-
-CONFIGURE_FILE(./test_globals.hpp.in test_globals.hpp @ONLY)
