--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - sudo apt-add-repository ppa:dhart/ppa -y
   - sudo apt-add-repository ppa:boost-latest/ppa -y
   - sudo apt-add-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo apt-add-repository ppa:yjwong/cmake -y
+  - sudo apt-add-repository ppa:andykimpe/cmake3 -y
   - sudo apt-get update -qq
   - sudo apt-get remove g++
   - sudo apt-get install -qq g++-4.7 build-essential
@@ -20,3 +20,7 @@ before_script:
 script:
   - make all
   - make test
+
+os:
+  - linux
+  - osx
