[test] Removed cmake and pkg-config to make environment more pristine.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-add-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-add-repository ppa:andykimpe/cmake3 -y
   - sudo apt-get update -qq
-  - sudo apt-get remove g++
+  - sudo apt-get remove g++ cmake pkg-config
   - sudo apt-get install -qq g++-4.7 build-essential
   - test/build_dependencies.bash
 
