--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ before_script:
 
 script:
   - make all
-  - make Experimental
+  - make ExperimentalTest
+  - make ExperimentalMemCheck
+  - make ExperimentalCoverage
 
 os:
   - linux
