[test] Fixed up suite.

--- a/src/libwintermutecore/CMakeLists.txt
+++ b/src/libwintermutecore/CMakeLists.txt
@@ -50,7 +50,7 @@ CONFIGURE_FILE(./globals.hpp.in globals.hpp @ONLY)
 
 ADD_LIBRARY(wintermutecore SHARED ${_srcs})
 WINTERMUTE_ADD_TARGET_PROPERTIES(wintermutecore)
-WINTERMUTE_LINK_LIBRARIES(wintermutecore)
+WINTERMUTE_LINK_LIBRARIES(wintermutecore gcov)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 SET_TARGET_PROPERTIES(wintermutecore PROPERTIES
