--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ before_install:
   - sudo apt-add-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-add-repository ppa:kubuntu-ppa/beta -y
   - sudo apt-get update -qq
-  - sudo apt-get install -qq g++-4.7 build-essential
+  - sudo apt-get install -qq build-essential
   - test/build_dependencies.bash
-  - sudo apt-get purge -qq g++-4.6 gcc-4.6
 
 before_script:
   - mkdir build && cd build
