--- a/test/include/test_suite.hpp.in
+++ b/test/include/test_suite.hpp.in
@@ -19,6 +19,7 @@
 #define WINTERMUTE_TEST_SUITE_HPP
 
 #define SAMPLE_PLUGIN_NAME "sample"
+#define SAMPLE_PLUGIN_FILE_NAME "libwintermutesample.so"
 #define SAMPLE_PLUGIN_PATH "@CMAKE_BINARY_DIR@/test/fixtures/libwintermutesample.so"
 
 #include "fixtures.hpp"
