--- a/src/libwintermutecore/globals.hpp.in
+++ b/src/libwintermutecore/globals.hpp.in
@@ -84,6 +84,7 @@ using std::string;
     }
 
 #define W_DECLARE_SINGLETON(Class) SharedPtr<Class> Class::_instance(nullptr);
+#define W_BOOL_TO_STR(booleanExpr) booleanExpr ? "true" : "false"
 
 // }}}
 
