--- a/test/include/test_suite.hpp.in
+++ b/test/include/test_suite.hpp.in
@@ -23,5 +23,6 @@
 #define SAMPLE_PLUGIN_PATH "@CMAKE_BINARY_DIR@/test/fixtures/libwintermutesample.so"
 
 #include "fixtures.hpp"
+#include <cstdlib>
 
 #endif
