--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -32,5 +32,5 @@ add_a_unit_test(tunnel)
 add_a_unit_test(util)
 add_a_unit_test(dispatcher)
 add_a_unit_test(plugin)
-add_a_unit_test(plugin_library)
+add_a_unit_test(library)
 #add_a_unit_test(version)
